# youtube-analytics-projectDZ

./: pyproject.toml
src/: channel.py  playlist.py  video.py
