[tool.poetry]
name = "youtube-analytics-projectdz"
version = "0.1.0"
description = ""
authors = ["KraevIvan <KraevIvanA@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.120.0"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
